[CHORE] Adequação na nomeclatura e tipo dos IDs

--- a/src/Cpnucleo.RazorPages/Pages/Erro.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Erro.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
 
-@ViewModel ErroModel
+@model ErroModel
 @{
     Layout = null;
     ViewData["Title"] = "Status 500";
