--- a/src/Cpnucleo.RazorPages/Pages/NaoEncontrado.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/NaoEncontrado.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
 
-@ViewModel NaoEncontradoModel
+@model NaoEncontradoModel
 @{
     Layout = null;
     ViewData["Title"] = "Status 404";
