--- a/src/Cpnucleo.RazorPages/Pages/RecursoProjeto/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/RecursoProjeto/Listar.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idProjeto:int}"
+﻿@page "{idProjeto:Guid}"
 
-@ViewModel RecursoProjeto.ListarModel
+@model RecursoProjeto.ListarModel
 @{
     ViewData["Title"] = "Relação de Recursos (Projeto)";
 }
@@ -29,7 +29,7 @@
                     <table class="table table-striped table-bordered table-hover table-datatable">
                         <thead>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.RecursoProjeto.IdRecursoProjeto)</th>
+                                <th>@Html.DisplayNameFor(x => x.RecursoProjeto.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.RecursoProjeto.Projeto)</th>
                                 <th>@Html.DisplayNameFor(x => x.RecursoProjeto.Recurso)</th>
                                 <th>@Html.DisplayNameFor(x => x.RecursoProjeto.DataInclusao)</th>
@@ -43,14 +43,14 @@
                             @foreach (var item in Model.Lista)
                             {
                                 <tr>
-                                    <td>@item.IdRecursoProjeto</td>
+                                    <td>@item.Id</td>
                                     <td>@item.Projeto.Nome</td>
                                     <td>@item.Recurso.Nome</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idRecursoProjeto="@item.IdRecursoProjeto">Remover</a>
+                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idRecursoProjeto="@item.Id">Remover</a>
                                         </td>
                                     }
                                 </tr>
@@ -58,7 +58,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.RecursoProjeto.IdRecursoProjeto)</th>
+                                <th>@Html.DisplayNameFor(x => x.RecursoProjeto.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.RecursoProjeto.Projeto)</th>
                                 <th>@Html.DisplayNameFor(x => x.RecursoProjeto.Recurso)</th>
                                 <th>@Html.DisplayNameFor(x => x.RecursoProjeto.DataInclusao)</th>
