--- a/src/Cpnucleo.RazorPages/Pages/Apontamento/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Apontamento/Listar.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-@ViewModel Apontamento.ListarModel
+@model Apontamento.ListarModel
 @{
     ViewData["Title"] = "Apontamentos";
 }
@@ -33,7 +33,7 @@
                     <table class="table table-striped table-bordered table-hover table-datatable">
                         <thead>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.Apontamento.IdApontamento)</th>
+                                <th>@Html.DisplayNameFor(x => x.Apontamento.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.Descricao)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.Tarefa)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.DataApontamento)</th>
@@ -49,7 +49,7 @@
                             @foreach (var item in Model.Lista)
                             {
                                 <tr>
-                                    <td>@item.IdApontamento</td>
+                                    <td>@item.Id</td>
                                     <td>@item.Descricao</td>
                                     <td>@item.Tarefa.Nome</td>
                                     <td>@item.DataApontamento.Value.ToString("dd/MM/yyyy")</td>
@@ -58,7 +58,7 @@
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Apontamento/Remover" asp-route-idApontamento="@item.IdApontamento">Remover</a>
+                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Apontamento/Remover" asp-route-idApontamento="@item.Id">Remover</a>
                                         </td>
                                     }
                                 </tr>
@@ -66,7 +66,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.Apontamento.IdApontamento)</th>
+                                <th>@Html.DisplayNameFor(x => x.Apontamento.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.Descricao)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.Tarefa)</th>
                                 <th>@Html.DisplayNameFor(x => x.Apontamento.DataApontamento)</th>
@@ -101,11 +101,11 @@
                             if (DateTime.Now.Date >= item.Tarefa.DataInicio && DateTime.Now.Date <= item.Tarefa.DataTermino)
                             {
                                 <li class="success-element" data-toggle="modal" data-target="#modal-apontamento"
-                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.IdTarefa" data-id-recurso="@item.IdRecurso">
+                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.Id" data-id-recurso="@item.IdRecurso">
                                     @item.Tarefa.Nome
                                     <div class="agile-detail">
                                         <i class="fa fa-clock-o"></i> @item.Tarefa.DataTermino.Value.ToString("dd/MM/yyyy")
-                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.IdTarefa criada por @item.Tarefa.Recurso.Nome</div>
+                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.Id criada por @item.Tarefa.Recurso.Nome</div>
                                         @if (@item.HorasDisponiveis >= 0)
                                         {
                                             <text>
@@ -125,11 +125,11 @@
                             else if (item.Tarefa.ListaImpedimentos.Count(x => x.Ativo) > 0)
                             {
                                 <li class="warning-element" data-toggle="modal" data-target="#modal-apontamento"
-                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.IdTarefa" data-id-recurso="@item.IdRecurso">
+                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.Id" data-id-recurso="@item.IdRecurso">
                                     @item.Tarefa.Nome
                                     <div class="agile-detail">
                                         <i class="fa fa-clock-o"></i> @item.Tarefa.DataTermino.Value.ToString("dd/MM/yyyy")
-                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.IdTarefa criada por @item.Tarefa.Recurso.Nome</div>
+                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.Id criada por @item.Tarefa.Recurso.Nome</div>
                                         @if (@item.HorasDisponiveis >= 0)
                                         {
                                             <text>
@@ -149,11 +149,11 @@
                             else if (DateTime.Now.Date > item.Tarefa.DataTermino && item.Tarefa.PercentualConcluido != 100)
                             {
                                 <li class="danger-element" data-toggle="modal" data-target="#modal-apontamento"
-                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.IdTarefa" data-id-recurso="@item.IdRecurso">
+                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.Id" data-id-recurso="@item.IdRecurso">
                                     @item.Tarefa.Nome
                                     <div class="agile-detail">
                                         <i class="fa fa-clock-o"></i> @item.Tarefa.DataTermino.Value.ToString("dd/MM/yyyy")
-                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.IdTarefa criada por @item.Tarefa.Recurso.Nome</div>
+                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.Id criada por @item.Tarefa.Recurso.Nome</div>
                                         @if (@item.HorasDisponiveis >= 0)
                                         {
                                             <text>
@@ -192,11 +192,11 @@
                             if (DateTime.Now.Date >= item.Tarefa.DataInicio && DateTime.Now.Date <= item.Tarefa.DataTermino)
                             {
                                 <li class="success-element" data-toggle="modal" data-target="#modal-apontamento"
-                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.IdTarefa" data-id-recurso="@item.IdRecurso">
+                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.Id" data-id-recurso="@item.IdRecurso">
                                     @item.Tarefa.Nome
                                     <div class="agile-detail">
                                         <i class="fa fa-clock-o"></i> @item.Tarefa.DataTermino.Value.ToString("dd/MM/yyyy")
-                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.IdTarefa criada por @item.Tarefa.Recurso.Nome</div>
+                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.Id criada por @item.Tarefa.Recurso.Nome</div>
                                         @if (@item.HorasDisponiveis >= 0)
                                         {
                                             <text>
@@ -216,11 +216,11 @@
                             else if (item.Tarefa.ListaImpedimentos.Count(x => x.Ativo) > 0)
                             {
                                 <li class="warning-element" data-toggle="modal" data-target="#modal-apontamento"
-                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.IdTarefa" data-id-recurso="@item.IdRecurso">
+                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.Id" data-id-recurso="@item.IdRecurso">
                                     @item.Tarefa.Nome
                                     <div class="agile-detail">
                                         <i class="fa fa-clock-o"></i> @item.Tarefa.DataTermino.Value.ToString("dd/MM/yyyy")
-                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.IdTarefa criada por @item.Tarefa.Recurso.Nome</div>
+                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.Id criada por @item.Tarefa.Recurso.Nome</div>
                                         @if (@item.HorasDisponiveis >= 0)
                                         {
                                             <text>
@@ -240,11 +240,11 @@
                             else if (DateTime.Now.Date > item.Tarefa.DataTermino && item.Tarefa.PercentualConcluido != 100)
                             {
                                 <li class="danger-element" data-toggle="modal" data-target="#modal-apontamento"
-                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.IdTarefa" data-id-recurso="@item.IdRecurso">
+                                    data-nome-tarefa="@item.Tarefa.Nome" data-id-tarefa="@item.Tarefa.Id" data-id-recurso="@item.IdRecurso">
                                     @item.Tarefa.Nome
                                     <div class="agile-detail">
                                         <i class="fa fa-clock-o"></i> @item.Tarefa.DataTermino.Value.ToString("dd/MM/yyyy")
-                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.IdTarefa criada por @item.Tarefa.Recurso.Nome</div>
+                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.Id criada por @item.Tarefa.Recurso.Nome</div>
                                         @if (@item.HorasDisponiveis >= 0)
                                         {
                                             <text>
@@ -286,7 +286,7 @@
                                     @item.Tarefa.Nome
                                     <div class="agile-detail">
                                         <i class="fa fa-clock-o"></i> @item.Tarefa.DataTermino.Value.ToString("dd/MM/yyyy")
-                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.IdTarefa criada por @item.Tarefa.Recurso.Nome</div>
+                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.Id criada por @item.Tarefa.Recurso.Nome</div>
                                         @if (@item.HorasDisponiveis >= 0)
                                         {
                                             <text>
@@ -309,7 +309,7 @@
                                     @item.Tarefa.Nome
                                     <div class="agile-detail">
                                         <i class="fa fa-clock-o"></i> @item.Tarefa.DataTermino.Value.ToString("dd/MM/yyyy")
-                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.IdTarefa criada por @item.Tarefa.Recurso.Nome</div>
+                                        <div class="m-xxs m-l-none"><i class="fa fa-user"></i> #@item.Tarefa.Id criada por @item.Tarefa.Recurso.Nome</div>
                                         @if (@item.HorasDisponiveis >= 0)
                                         {
                                             <text>
