--- a/src/Cpnucleo.RazorPages/Pages/Apontamento/Remover.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Apontamento/Remover.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idApontamento:int}"
+﻿@page "{idApontamento:Guid}"
 
-@ViewModel Apontamento.RemoverModel
+@model Apontamento.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Apontamento";
 }
@@ -18,10 +18,10 @@
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Apontamento.IdApontamento"></label>
+                    <label class="col-sm-2 control-label" asp-for="Apontamento.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="Apontamento.IdApontamento">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.Apontamento.IdApontamento)</p>
+                        <input type="hidden" asp-for="Apontamento.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.Apontamento.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
