--- a/src/Cpnucleo.RazorPages/Pages/Impedimento/Alterar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Impedimento/Alterar.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idImpedimento:int}"
+﻿@page "{idImpedimento:Guid}"
 
-@ViewModel Impedimento.AlterarModel
+@model Impedimento.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Impedimento";
 }
@@ -18,10 +18,10 @@
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Impedimento.IdImpedimento"></label>
+                    <label class="col-sm-2 control-label" asp-for="Impedimento.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="Impedimento.IdImpedimento">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.Impedimento.IdImpedimento)</p>
+                        <input type="hidden" asp-for="Impedimento.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.Impedimento.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -53,5 +53,5 @@
 </div>
 
 @section Scripts {
-    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
