--- a/src/Cpnucleo.RazorPages/Pages/Impedimento/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Impedimento/Listar.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-@ViewModel Impedimento.ListarModel
+@model Impedimento.ListarModel
 @{
     ViewData["Title"] = "Relação de Impedimentos";
 }
@@ -28,7 +28,7 @@
                     <table class="table table-striped table-bordered table-hover table-datatable">
                         <thead>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.Impedimento.IdImpedimento)</th>
+                                <th>@Html.DisplayNameFor(x => x.Impedimento.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.Impedimento.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Impedimento.DataInclusao)</th>
                                 @if (Model.Lista.Count() > 0)
@@ -42,16 +42,16 @@
                             @foreach (var item in Model.Lista)
                             {
                                 <tr>
-                                    <td>@item.IdImpedimento</td>
+                                    <td>@item.Id</td>
                                     <td>@item.Nome</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idImpedimento="@item.IdImpedimento">Alterar</a>
+                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idImpedimento="@item.Id">Alterar</a>
                                         </td>
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idImpedimento="@item.IdImpedimento">Remover</a>
+                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idImpedimento="@item.Id">Remover</a>
                                         </td>
                                     }
                                 </tr>
@@ -59,7 +59,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.Impedimento.IdImpedimento)</th>
+                                <th>@Html.DisplayNameFor(x => x.Impedimento.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.Impedimento.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Impedimento.DataInclusao)</th>
                                 @if (Model.Lista.Count() > 0)
