--- a/src/Cpnucleo.RazorPages/Pages/ImpedimentoTarefa/Alterar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/ImpedimentoTarefa/Alterar.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idImpedimentoTarefa:int}"
+﻿@page "{idImpedimentoTarefa:Guid}"
 
-@ViewModel ImpedimentoTarefa.AlterarModel
+@model ImpedimentoTarefa.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Impedimento (Tarefa)";
 }
@@ -23,10 +23,10 @@
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="ImpedimentoTarefa.IdImpedimentoTarefa"></label>
+                    <label class="col-sm-2 control-label" asp-for="ImpedimentoTarefa.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="ImpedimentoTarefa.IdImpedimentoTarefa">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.ImpedimentoTarefa.IdImpedimentoTarefa)</p>
+                        <input type="hidden" asp-for="ImpedimentoTarefa.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.ImpedimentoTarefa.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -49,7 +49,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="ImpedimentoTarefa.IdImpedimento"></label>
                     <div class="col-sm-10">
-                        <select class="form-control m-b" asp-for="ImpedimentoTarefa.IdImpedimento" asp-items="@Model.SelectImpedimentos"></select>
+                        <select class="form-control m-b" asp-for="ImpedimentoTarefa.IdImpedimento" asp-items="Model.SelectImpedimentos"></select>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -72,7 +72,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="@Model.ImpedimentoTarefa.IdTarefa">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="Model.ImpedimentoTarefa.IdTarefa">Voltar</a>
                         <button class="btn btn-primary" type="submit">Alterar</button>
                     </div>
                 </div>
@@ -93,5 +93,5 @@
         });
     </script>    
 
-    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
