--- a/src/Cpnucleo.RazorPages/Pages/ImpedimentoTarefa/Incluir.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/ImpedimentoTarefa/Incluir.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idTarefa:int}"
+﻿@page "{idTarefa:Guid}"
 
-@ViewModel ImpedimentoTarefa.IncluirModel
+@model ImpedimentoTarefa.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Impedimento (Tarefa)";
 }
@@ -25,7 +25,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="ImpedimentoTarefa.IdTarefa"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="ImpedimentoTarefa.IdTarefa" value="@Model.Tarefa.IdTarefa">
+                        <input type="hidden" asp-for="ImpedimentoTarefa.IdTarefa" value="Model.Tarefa.IdTarefa">
                         <p class="form-control-static">@Html.DisplayFor(x => x.Tarefa.Nome)</p>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="ImpedimentoTarefa.IdImpedimento"></label>
                     <div class="col-sm-10">
-                        <select class="form-control m-b" asp-for="ImpedimentoTarefa.IdImpedimento" asp-items="@Model.SelectImpedimentos"></select>
+                        <select class="form-control m-b" asp-for="ImpedimentoTarefa.IdImpedimento" asp-items="Model.SelectImpedimentos"></select>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -56,7 +56,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="@Model.Tarefa.IdTarefa">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="Model.Tarefa.IdTarefa">Voltar</a>
                         <button class="btn btn-primary" type="submit">Incluir</button>
                     </div>
                 </div>
@@ -77,5 +77,5 @@
         });
     </script>    
 
-    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
