--- a/src/Cpnucleo.RazorPages/Pages/ImpedimentoTarefa/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/ImpedimentoTarefa/Listar.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idTarefa:int}"
+﻿@page "{idTarefa:Guid}"
 
-@ViewModel ImpedimentoTarefa.ListarModel
+@model ImpedimentoTarefa.ListarModel
 @{
     ViewData["Title"] = "Relação de Impedimentos (Tarefa)";
 }
@@ -29,7 +29,7 @@
                     <table class="table table-striped table-bordered table-hover table-datatable">
                         <thead>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.IdImpedimentoTarefa)</th>
+                                <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Descricao)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Tarefa)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Impedimento)</th>
@@ -46,7 +46,7 @@
                             @foreach (var item in Model.Lista)
                             {
                                 <tr>
-                                    <td>@item.IdImpedimentoTarefa</td>
+                                    <td>@item.Id</td>
                                     <td>@item.Descricao</td>
                                     <td>@item.Tarefa.Nome</td>
                                     <td>@item.Impedimento.Nome</td>
@@ -55,10 +55,10 @@
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idImpedimentoTarefa="@item.IdImpedimentoTarefa">Alterar</a>
+                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idImpedimentoTarefa="@item.Id">Alterar</a>
                                         </td>
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idImpedimentoTarefa="@item.IdImpedimentoTarefa">Remover</a>
+                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idImpedimentoTarefa="@item.Id">Remover</a>
                                         </td>
                                     }
                                 </tr>
@@ -66,7 +66,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.IdImpedimentoTarefa)</th>
+                                <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Descricao)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Tarefa)</th>
                                 <th>@Html.DisplayNameFor(x => x.ImpedimentoTarefa.Impedimento)</th>
