--- a/src/Cpnucleo.RazorPages/Pages/Login.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
 
-@ViewModel LoginModel
+@model LoginModel
 @{
     Layout = null;
     ViewData["Title"] = "Login";
@@ -106,7 +106,7 @@
     <script src="~/js/jquery-3.1.1.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     
-    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 
 </body>
 
