--- a/src/Cpnucleo.RazorPages/Pages/Negado.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Negado.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
 
-@ViewModel NegadoModel
+@model NegadoModel
 @{
     Layout = null;
     ViewData["Title"] = "Status 403";
