--- a/src/Cpnucleo.RazorPages/Pages/Projeto/Alterar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Projeto/Alterar.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idProjeto:int}"
+﻿@page "{idProjeto:Guid}"
 
-@ViewModel Projeto.AlterarModel
+@model Projeto.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Projeto";
 }
@@ -18,10 +18,10 @@
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Projeto.IdProjeto"></label>
+                    <label class="col-sm-2 control-label" asp-for="Projeto.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="Projeto.IdProjeto">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.Projeto.IdProjeto)</p>
+                        <input type="hidden" asp-for="Projeto.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.Projeto.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -36,7 +36,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="Projeto.IdSistema"></label>
                     <div class="col-sm-10">
-                        <select class="form-control m-b" asp-for="Projeto.IdSistema" asp-items="@Model.SelectSistemas"></select>
+                        <select class="form-control m-b" asp-for="Projeto.IdSistema" asp-items="Model.SelectSistemas"></select>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -60,5 +60,5 @@
 </div>
 
 @section Scripts {
-    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
