--- a/src/Cpnucleo.RazorPages/Pages/Projeto/Incluir.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Projeto/Incluir.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-@ViewModel Projeto.IncluirModel
+@model Projeto.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Projeto";
 }
@@ -28,7 +28,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="Projeto.IdSistema"></label>
                     <div class="col-sm-10">
-                        <select class="form-control m-b" asp-for="Projeto.IdSistema" asp-items="@Model.SelectSistemas"></select>
+                        <select class="form-control m-b" asp-for="Projeto.IdSistema" asp-items="Model.SelectSistemas"></select>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -44,5 +44,5 @@
 </div>
 
 @section Scripts {
-    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
