--- a/src/Cpnucleo.RazorPages/Pages/Projeto/Remover.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Projeto/Remover.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idProjeto:int}"
+﻿@page "{idProjeto:Guid}"
 
-@ViewModel Projeto.RemoverModel
+@model Projeto.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Projeto";
 }
@@ -18,10 +18,10 @@
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Projeto.IdProjeto"></label>
+                    <label class="col-sm-2 control-label" asp-for="Projeto.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="Projeto.IdProjeto">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.Projeto.IdProjeto)</p>
+                        <input type="hidden" asp-for="Projeto.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.Projeto.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
