--- a/src/Cpnucleo.RazorPages/Pages/Recurso/Alterar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Recurso/Alterar.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idRecurso:int}"
+﻿@page "{idRecurso:Guid}"
 
-@ViewModel Recurso.AlterarModel
+@model Recurso.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Recurso";
 }
@@ -29,10 +29,10 @@
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Recurso.IdRecurso"></label>
+                    <label class="col-sm-2 control-label" asp-for="Recurso.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="Recurso.IdRecurso">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.Recurso.IdRecurso)</p>
+                        <input type="hidden" asp-for="Recurso.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.Recurso.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -163,5 +163,5 @@
         }
     </script>
     
-    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
