--- a/src/Cpnucleo.RazorPages/Pages/Recurso/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Recurso/Listar.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-@ViewModel Recurso.ListarModel
+@model Recurso.ListarModel
 @{
     ViewData["Title"] = "Relação de Recursos";
 }
@@ -28,7 +28,7 @@
                     <table class="table table-striped table-bordered table-hover table-datatable">
                         <thead>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.Recurso.IdRecurso)</th>
+                                <th>@Html.DisplayNameFor(x => x.Recurso.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.Ativo)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.DataInclusao)</th>
@@ -43,17 +43,17 @@
                             @foreach (var item in Model.Lista)
                             {
                                 <tr>
-                                    <td>@item.IdRecurso</td>
+                                    <td>@item.Id</td>
                                     <td>@item.Nome</td>
                                     <td>@(item.Ativo ? "Sim" : "Não")</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idRecurso="@item.IdRecurso">Alterar</a>
+                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idRecurso="@item.Id">Alterar</a>
                                         </td>
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idRecurso="@item.IdRecurso">Remover</a>
+                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idRecurso="@item.Id">Remover</a>
                                         </td>
                                     }
                                 </tr>
@@ -61,7 +61,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.Recurso.IdRecurso)</th>
+                                <th>@Html.DisplayNameFor(x => x.Recurso.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.Ativo)</th>
                                 <th>@Html.DisplayNameFor(x => x.Recurso.DataInclusao)</th>
