--- a/src/Cpnucleo.RazorPages/Pages/RecursoProjeto/Remover.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/RecursoProjeto/Remover.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idRecursoProjeto:int}"
+﻿@page "{idRecursoProjeto:Guid}"
 
-@ViewModel RecursoProjeto.RemoverModel
+@model RecursoProjeto.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Recurso (Projeto)";
 }
@@ -18,10 +18,10 @@
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoProjeto.IdRecursoProjeto"></label>
+                    <label class="col-sm-2 control-label" asp-for="RecursoProjeto.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="RecursoProjeto.IdRecursoProjeto">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.RecursoProjeto.IdRecursoProjeto)</p>
+                        <input type="hidden" asp-for="RecursoProjeto.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.RecursoProjeto.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -51,7 +51,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idProjeto="@Model.RecursoProjeto.IdProjeto">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idProjeto="Model.RecursoProjeto.IdProjeto">Voltar</a>
                         <button class="btn btn-primary" type="submit">Remover</button>
                     </div>
                 </div>
