--- a/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Alterar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Alterar.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idRecursoTarefa:int}"
+﻿@page "{idRecursoTarefa:Guid}"
 
-@ViewModel RecursoTarefa.AlterarModel
+@model RecursoTarefa.AlterarModel
 @{
     ViewData["Title"] = "Alteração de Recurso (Tarefa)";
 }
@@ -23,17 +23,17 @@
         <div class="ibox-content">
             <form asp-page="Alterar" method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoTarefa.IdRecursoTarefa"></label>
+                    <label class="col-sm-2 control-label" asp-for="RecursoTarefa.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="RecursoTarefa.IdRecursoTarefa">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.RecursoTarefa.IdRecursoTarefa)</p>
+                        <input type="hidden" asp-for="RecursoTarefa.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.RecursoTarefa.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="RecursoTarefa.IdTarefa"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="RecursoTarefa.IdTarefa" value="@Model.Tarefa.IdTarefa">
+                        <input type="hidden" asp-for="RecursoTarefa.IdTarefa" value="Model.Tarefa.IdTarefa">
                         <p class="form-control-static">@Html.DisplayFor(x => x.Tarefa.Nome)</p>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="RecursoTarefa.IdRecurso"></label>
                     <div class="col-sm-10">
-                        <select class="form-control m-b" asp-for="RecursoTarefa.IdRecurso" asp-items="@Model.SelectRecursos"></select>
+                        <select class="form-control m-b" asp-for="RecursoTarefa.IdRecurso" asp-items="Model.SelectRecursos"></select>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -63,7 +63,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="@Model.RecursoTarefa.IdTarefa">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="Model.RecursoTarefa.IdTarefa">Voltar</a>
                         <button class="btn btn-primary" type="submit">Alterar</button>
                     </div>
                 </div>
@@ -85,5 +85,5 @@
         });
     </script>
     
-    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
