--- a/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Remover.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Remover.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idRecursoTarefa:int}"
+﻿@page "{idRecursoTarefa:Guid}"
 
-@ViewModel RecursoTarefa.RemoverModel
+@model RecursoTarefa.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Recurso (Tarefa)";
 }
@@ -18,10 +18,10 @@
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="RecursoTarefa.IdRecursoTarefa"></label>
+                    <label class="col-sm-2 control-label" asp-for="RecursoTarefa.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="RecursoTarefa.IdRecursoTarefa">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.RecursoTarefa.IdRecursoTarefa)</p>
+                        <input type="hidden" asp-for="RecursoTarefa.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.RecursoTarefa.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -59,7 +59,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="@Model.RecursoTarefa.IdTarefa">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="Model.RecursoTarefa.IdTarefa">Voltar</a>
                         <button class="btn btn-primary" type="submit">Remover</button>
                     </div>
                 </div>
