--- a/src/Cpnucleo.RazorPages/Pages/Tarefa/Incluir.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Tarefa/Incluir.cshtml
@@ -5,7 +5,7 @@
 
 @inject IClaimsManager _claimsManager
 
-@ViewModel Tarefa.IncluirModel
+@model Tarefa.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Tarefa";
 }
@@ -30,7 +30,7 @@
 
                 @{
                     string retorno = _claimsManager.ReadClaimsPrincipal(HttpContext.User, ClaimTypes.PrimarySid);
-                    int idRecurso = int.Parse(retorno);
+                    Guid idRecurso = new Guid(retorno);
                 }
 
                 <input type="hidden" asp-for="Tarefa.IdRecurso" value="@idRecurso" />
@@ -47,7 +47,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="Tarefa.IdProjeto"></label>
                     <div class="col-sm-10">
-                        <select class="form-control m-b" asp-for="Tarefa.IdProjeto" asp-items="@Model.SelectProjetos"></select>
+                        <select class="form-control m-b" asp-for="Tarefa.IdProjeto" asp-items="Model.SelectProjetos"></select>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -92,14 +92,14 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="Tarefa.IdTipoTarefa"></label>
                     <div class="col-sm-10">
-                        <select class="form-control m-b" asp-for="Tarefa.IdTipoTarefa" asp-items="@Model.SelectTipoTarefas"></select>
+                        <select class="form-control m-b" asp-for="Tarefa.IdTipoTarefa" asp-items="Model.SelectTipoTarefas"></select>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="Tarefa.IdWorkflow"></label>
                     <div class="col-sm-10">
-                        <select class="form-control m-b" asp-for="Tarefa.IdWorkflow" asp-items="@Model.SelectWorkflows"></select>
+                        <select class="form-control m-b" asp-for="Tarefa.IdWorkflow" asp-items="Model.SelectWorkflows"></select>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -143,5 +143,5 @@
         });
     </script>
 
-    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
