--- a/src/Cpnucleo.RazorPages/Pages/Tarefa/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Tarefa/Listar.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
-@ViewModel Tarefa.ListarModel
+@model Tarefa.ListarModel
 @{
     ViewData["Title"] = "Relação de Tarefas";
 }
@@ -28,7 +28,7 @@
                     <table class="table table-striped table-bordered table-hover table-datatable">
                         <thead>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.Tarefa.IdTarefa)</th>
+                                <th>@Html.DisplayNameFor(x => x.Tarefa.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.Projeto)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.DataInclusao)</th>
@@ -45,23 +45,23 @@
                             @foreach (var item in Model.Lista)
                             {
                                 <tr>
-                                    <td>@item.IdTarefa</td>
+                                    <td>@item.Id</td>
                                     <td>@item.Nome</td>
                                     <td>@item.Projeto.Nome</td>
                                     <td>@item.DataInclusao.Value.ToString("dd/MM/yyyy")</td>
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idTarefa="@item.IdTarefa">Alterar</a>
+                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idTarefa="@item.Id">Alterar</a>
                                         </td>
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idTarefa="@item.IdTarefa">Remover</a>
+                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idTarefa="@item.Id">Remover</a>
                                         </td>
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-info btn-xs" role="button" asp-page="/RecursoTarefa/Listar" asp-route-idTarefa="@item.IdTarefa">+ Recurso</a>
+                                            <a class="btn btn-outline btn-info btn-xs" role="button" asp-page="/RecursoTarefa/Listar" asp-route-idTarefa="@item.Id">+ Recurso</a>
                                         </td>
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-success btn-xs" role="button" asp-page="/ImpedimentoTarefa/Listar" asp-route-idTarefa="@item.IdTarefa">+ Impedimento</a>
+                                            <a class="btn btn-outline btn-success btn-xs" role="button" asp-page="/ImpedimentoTarefa/Listar" asp-route-idTarefa="@item.Id">+ Impedimento</a>
                                         </td>
                                     }
                                 </tr>
@@ -69,7 +69,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>@Html.DisplayNameFor(x => x.Tarefa.IdTarefa)</th>
+                                <th>@Html.DisplayNameFor(x => x.Tarefa.Id)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.Nome)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.Projeto)</th>
                                 <th>@Html.DisplayNameFor(x => x.Tarefa.DataInclusao)</th>
