--- a/src/Cpnucleo.RazorPages/Pages/Tarefa/Remover.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Tarefa/Remover.cshtml
@@ -1,6 +1,6 @@
-﻿@page "{idTarefa:int}"
+﻿@page "{idTarefa:Guid}"
 
-@ViewModel Tarefa.RemoverModel
+@model Tarefa.RemoverModel
 @{
     ViewData["Title"] = "Remoção de Tarefa";
 }
@@ -18,10 +18,10 @@
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Tarefa.IdTarefa"></label>
+                    <label class="col-sm-2 control-label" asp-for="Tarefa.Id"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="Tarefa.IdTarefa">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.Tarefa.IdTarefa)</p>
+                        <input type="hidden" asp-for="Tarefa.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.Tarefa.Id)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
