[CHORE] Mais reestruturação relacionada ao DDD

--- a/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Remover.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Remover.cshtml
@@ -59,7 +59,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="Model.RecursoTarefa.IdTarefa">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="@Model.RecursoTarefa.IdTarefa">Voltar</a>
                         <button class="btn btn-primary" type="submit">Remover</button>
                     </div>
                 </div>
