--- a/src/Cpnucleo.RazorPages/Pages/ImpedimentoTarefa/Alterar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/ImpedimentoTarefa/Alterar.cshtml
@@ -72,7 +72,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="Model.ImpedimentoTarefa.IdTarefa">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="@Model.ImpedimentoTarefa.IdTarefa">Voltar</a>
                         <button class="btn btn-primary" type="submit">Alterar</button>
                     </div>
                 </div>
