--- a/src/Cpnucleo.RazorPages/Pages/RecursoProjeto/Remover.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/RecursoProjeto/Remover.cshtml
@@ -28,7 +28,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="RecursoProjeto.IdProjeto"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="RecursoProjeto.IdProjeto">
+                        <input type="hidden" asp-for="RecursoProjeto.IdProjeto" value="@Model.RecursoProjeto.IdProjeto">
                         <p class="form-control-static">@Html.DisplayFor(x => x.RecursoProjeto.Projeto.Nome)</p>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idProjeto="Model.RecursoProjeto.IdProjeto">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idProjeto="@Model.RecursoProjeto.IdProjeto">Voltar</a>
                         <button class="btn btn-primary" type="submit">Remover</button>
                     </div>
                 </div>
