--- a/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Alterar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Alterar.cshtml
@@ -33,8 +33,8 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="RecursoTarefa.IdTarefa"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="RecursoTarefa.IdTarefa" value="Model.Tarefa.IdTarefa">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.Tarefa.Nome)</p>
+                        <input type="hidden" asp-for="RecursoTarefa.IdTarefa" value="@Model.RecursoTarefa.Tarefa.Id">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.RecursoTarefa.Tarefa.Nome)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -63,7 +63,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="Model.RecursoTarefa.IdTarefa">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="@Model.RecursoTarefa.IdTarefa">Voltar</a>
                         <button class="btn btn-primary" type="submit">Alterar</button>
                     </div>
                 </div>
