--- a/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Incluir.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/RecursoTarefa/Incluir.cshtml
@@ -25,7 +25,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="RecursoTarefa.IdTarefa"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="RecursoTarefa.IdTarefa" value="Model.Tarefa.IdTarefa">
+                        <input type="hidden" asp-for="RecursoTarefa.IdTarefa" value="@Model.Tarefa.Id">
                         <p class="form-control-static">@Html.DisplayFor(x => x.Tarefa.Nome)</p>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="Model.Tarefa.IdTarefa">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idTarefa="@Model.Tarefa.Id">Voltar</a>
                         <button class="btn btn-primary" type="submit">Incluir</button>
                     </div>
                 </div>
