--- a/src/Cpnucleo.RazorPages/Pages/Apontamento/Remover.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Apontamento/Remover.cshtml
@@ -75,7 +75,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="/Apontamento">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar">Voltar</a>
                         <button class="btn btn-primary" type="submit">Remover</button>
                     </div>
                 </div>
