[CHORE] Correção nas rotas de erro

--- a/src/Cpnucleo.RazorPages/Pages/Erro.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Erro.cshtml
@@ -33,7 +33,7 @@
 
         <div class="error-desc">
             O servidor encontrou algo inesperado que não lhe permitiu concluir a solicitação. Nós pedimos desculpas.<br /><br />
-            Você pode voltar para a página principal: <br /><a asp-page="Apontamento" class="btn btn-primary m-t">Voltar</a>
+            Você pode voltar para a página principal: <br /><a asp-page="/Apontamento/Listar" class="btn btn-primary m-t">Voltar</a>
         </div>
     </div>
 
