--- a/src/Cpnucleo.RazorPages/Pages/Negado.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Negado.cshtml
@@ -33,7 +33,7 @@
 
         <div class="error-desc">
             Você não tem permissão para visualizar este diretório ou página usando as credenciais fornecidas.<br /><br />
-            Você pode voltar para a página principal: <br /><a asp-page="Apontamento" class="btn btn-primary m-t">Voltar</a>
+            Você pode voltar para a página principal: <br /><a asp-page="/Apontamento/Listar" class="btn btn-primary m-t">Voltar</a>
         </div>
     </div>
 
