--- a/src/Cpnucleo.RazorPages/Pages/NaoEncontrado.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/NaoEncontrado.cshtml
@@ -33,7 +33,7 @@
 
         <div class="error-desc">
             A página que você está procurando pode ter sido removida, teve seu nome alterado ou está temporariamente indisponível.<br /><br />
-            Você pode voltar para a página principal: <br /><a asp-page="Apontamento" class="btn btn-primary m-t">Voltar</a>
+            Você pode voltar para a página principal: <br /><a asp-page="/Apontamento/Listar" class="btn btn-primary m-t">Voltar</a>
         </div>
     </div>
 
