--- a/src/Cpnucleo.RazorPages/Pages/Recurso/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Recurso/Listar.cshtml
@@ -50,10 +50,10 @@
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idRecurso="@item.Id">Alterar</a>
+                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-id="@item.Id">Alterar</a>
                                         </td>
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idRecurso="@item.Id">Remover</a>
+                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-id="@item.Id">Remover</a>
                                         </td>
                                     }
                                 </tr>
