--- a/src/Cpnucleo.RazorPages/Pages/RecursoProjeto/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/RecursoProjeto/Listar.cshtml
@@ -50,7 +50,7 @@
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idRecursoProjeto="@item.Id">Remover</a>
+                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-id="@item.Id">Remover</a>
                                         </td>
                                     }
                                 </tr>
