--- a/src/Cpnucleo.RazorPages/Pages/Tarefa/Listar.cshtml
+++ b/src/Cpnucleo.RazorPages/Pages/Tarefa/Listar.cshtml
@@ -52,10 +52,10 @@
                                     @if (Model.Lista.Count() > 0)
                                     {
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-idTarefa="@item.Id">Alterar</a>
+                                            <a class="btn btn-outline btn-warning btn-xs" role="button" asp-page="Alterar" asp-route-id="@item.Id">Alterar</a>
                                         </td>
                                         <td style="text-align: center">
-                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-idTarefa="@item.Id">Remover</a>
+                                            <a class="btn btn-outline btn-danger btn-xs" role="button" asp-page="Remover" asp-route-id="@item.Id">Remover</a>
                                         </td>
                                         <td style="text-align: center">
                                             <a class="btn btn-outline btn-info btn-xs" role="button" asp-page="/RecursoTarefa/Listar" asp-route-idTarefa="@item.Id">+ Recurso</a>
